# DnGClientSource

./: .gitignore  README.md
clientwork/: buildall.bat  copyscratch.bat  doall.bat  doit.bat  obj.bat  rebuild.sh
clientwork/Interp/: ActiveSkin.tlh  Array.hpp  Breakpt.cpp  Bufferd.cpp  Bufferw.cpp  BuyDlg.cpp  BuyDlg.hpp  C++SCI.cpp  C++SCI.hpp  CMakeLists.txt  Celasm.asm  Celobj.cpp  Celobj.hpp  Celobj1.cpp  Celobj2.cpp  Celobja.cpp  ChatSettings.cpp  ChatSettings.hpp  ChngPass.cpp  ChngPass.hpp  Compiler.hpp  Config.cpp  Cursor.hpp  Cursorw.cpp  Cursorw.hpp  Dcomp.asm  Debug.cpp  Debug.hpp  Debugdsp.cpp  Debugdsp.hpp  Debugmnu.cpp  Dialog.cpp  Dialog.hpp  DiskID32.hpp  DlgWnd.cpp  DlgWnd.hpp  Dlg_Gen.cpp  Dlg_Gen.hpp  Dos.cpp  Dos.hpp  (+308 more)
clientwork/Interp/Backup/: Sciw.sln
clientwork/Interp/Debug/: 30501.v56  3052.p56  45012.hep.bak  ActiveSkin.tlh  Arglist.cod  Array.cod  Breakpt.cod  Bufferd.cod  Bufferw.cod  BuyDlg.cod  C++SCI.cod  CHARMENU.MID  Celobj.cod  Celobj1.cod  Celobj2.cod  Celobja.cod  ChatSettings.cod  ChngPass.cod  Config.cod  Cursorw.cod  DEATH.MID  Debug.cod  Debugdsp.cod  Debugmnu.cod  Dialog.cod  DlgWnd.cod  Dos.cod  Drawlist.cod  Event.cod  EventVerbs.cod  Eventw.cod  FITE2.MID  Font.cod  Fonti.cod  GameSettings.cod  GenericDlg.cod  Graph.cod  Graphmgr.cod  Graphmw.cod  GroupList.cod  (+184 more)
clientwork/Interp/Debug/bk/: RESMAP.000
clientwork/Interp/Debug/skins/default/: cc_bio.skn  dlg_buttons.skn  dlg_chatmain.skn  dlg_chatoptions.skn  dlg_choice.skn  dlg_drag.skn  dlg_eventcreator.skn  dlg_evict.skn  dlg_gspfriends.skn  dlg_gspl.skn  dlg_gsplookat.skn  dlg_gsppeople.skn  dlg_intro.skn  dlg_inventory.skn  dlg_luggage.skn  dlg_mailsub.skn  dlg_message.skn  dlg_passwordchanger.skn  dlg_passwordlogin.skn  dlg_passwordloginwithlist.skn  dlg_spellverbs.skn  dlg_splash.skn  la_1.skn  la_4.skn  la_5.skn  mp_menu.skn  tab_mailwrite.skn  tab_room.skn
clientwork/Interp/Debug/skins/user/: cs_menu.skn  la_3.skn  readme.txt
clientwork/Interp/Release/: ACADEMY.MID  ActiveSkin.tlh  Arglist.cod  Array.cod  BATTLE1.MID  BATTLE2.MID  BATTLE3.MID  Breakpt.cod  Bufferd.cod  Bufferw.cod  BuyDlg.cod  C++SCI.cod  Celobj.cod  Celobj1.cod  Celobj2.cod  Celobja.cod  ChatSettings.cod  ChngPass.cod  Config.cod  Cursorw.cod  DUNGEON.MID  DUNGEON1.MID  DUNGEON2.MID  Debug.cod  Debugdsp.cod  Debugmnu.cod  Dialog.cod  DlgWnd.cod  Dos.cod  Drawlist.cod  ENGAGE1.MID  ENGAGE2.MID  Event.cod  EventVerbs.cod  Eventw.cod  FACE.MID  FITE1.MID  Font.cod  Fonti.cod  GameSettings.cod  (+209 more)
clientwork/Interp/Release/skins/default/: bkg_lookat.skn  cc_attr.skn  cc_face.skn  dlg_beginner.skn  dlg_combat.skn  dlg_dead.skn  dlg_err.skn  dlg_event.skn  dlg_exitcombat.skn  dlg_gameoptions.skn  dlg_generic.skn  dlg_gsp.skn  dlg_gspcreator.skn  dlg_gspmembers.skn  dlg_gspmod.skn  dlg_gspsmall.skn  dlg_itemlist.skn  dlg_lookat.skn  dlg_mail.skn  dlg_mailsend.skn  dlg_makeitem.skn  dlg_modwhol.skn  dlg_namehealth.skn  dlg_numinput.skn  dlg_numinput2.skn  dlg_password.skn  dlg_purchase.skn  dlg_repair.skn  dlg_rply.skn  dlg_sell.skn  dlg_serverchoices.skn  dlg_spells.skn  dlg_tab.skn  dlg_talk.skn  dlg_teleport.skn  dlg_tell.skn  dlg_treasure.skn  dlg_update.skn  dlg_verb.skn  dlg_whatsnew.skn  (+15 more)
clientwork/Interp/Release/skins/user/: dlg_luggage.skn  la_1.skn  readme.txt
clientwork/Interp/Res/: do.cur  drop.cur  exitdown.cur  exitleft.cur  exitlright.cur  exitup.cur  putin.cur  spell.cur  walk.cur
clientwork/MSG/: 0.MSG  0.SHM  1.MSG  1.SHM  101.MSG  101.SHM  101NEW.MSG  102.MSG  102.SHM  103.MSG  103.SHM  104.MSG  104.SHM  106.MSG  106.SHM  11000.MSG  11000.SHM  11001.MSG  11001.SHM  12000.MSG  12000.SHM  15000.MSG  15000.SHM  15100.MSG  15100.SHM  2.MSG  2.SHM  201.MSG  201.SHM  202.MSG  202.SHM  203.MSG  203.SHM  250.MSG  250.SHM  350.MSG  350.SHM  40207.MSG  40207.SHM  41004.MSG  (+36 more)
clientwork/MSG/OLD/: 100.MSG  100.SHM  1000.MSG  1000.SHM  101.MSG  101.SHM  2000.MSG  2000.SHM  FILLER.SHM
clientwork/OLD_INTERP/: ARGLIST.CPP  ARRAY.CPP  ASM2CPP.CPP  ASM2CPP.HPP  AUDIO.CPP  AUDIO.HPP  AUDIOW.CPP  AUDIOW.HPP  AUDIOWA.ASM  AUDIOWIN.CPP  BLOB.CPP  BREAKPT.CPP  BUFFERD.CPP  BUFFERW.CPP  BUFFERW.HPP  CELASM.HPP  CELASM.NEW  CELASMH.NEW  CELOBJ.CPP  CELOBJ.HPP  CELOBJ.OLD  CELOBJ1.CPP  CELOBJ2.CPP  CELOBJA.CPP  CELOBJA.NEW  COMPILER.HPP  CONFIG.CPP  CONFIG.HPP  CURSOR.HPP  CURSORD.CPP  CURSORD.HPP  CURSORW.CPP  CURSORW.HPP  DCOMP.ASM  DEBUG.CPP  DEBUG.HPP  DEBUGDSP.CPP  DEBUGDSP.HPP  DIALOG.CPP  DINPUT.H  (+207 more)
clientwork/OLD_INTERP/Debug/: BuildLog.htm  vc70.idb
clientwork/OLD_INTERP/FastGraph/: FGWIN.H
clientwork/OLD_INTERP/OLD_INTERP___Win32_Debug/: vc60.idb
clientwork/OLD_INTERP/WIN95/: BUTT.COD  CLOCK001.STS  DIR.TXT  Life.aps  MMAIL.DLG  MMAIL.H  MSS32BC.DEF  Makefile  Makeinit  RECAP.DOC  RESMAP.000  RESMAP.010  RESOURCE.WIN  SCIW.BAK  SCIW.CMP  SCIW.MAP  SCIW.NMS  SCIW.SMP  SCIW.SYM  SCIWRES.APS  Sciw.aps  Sciw.rc  object.lst  resmap.001  resmap.002  resmap.003  resmap.005  resmap.006  resmap.007  resmap.008  resmap.009  resmap.011  resmap.012  resmap.013  resmap.014  resource.h  ressci.000  ressci.001  ressci.002  ressci.005  (+9 more)
clientwork/OLD_INTERP/WIN95V/: ERR.MSG  HELP  LIFE.APS  LIFE.RC  MAKEFILE.BAK  (+27 more)
clientwork/SCI_SYS/: 60000.inf  60001.inf  60002.inf  60003.inf  60004.inf  60005.inf  60007.inf  60008.inf  60009.inf  60010.inf  60011.inf  60012.inf  60013.inf  60018.inf  60019.inf  60020.inf  60021.inf  60022.inf  60025.inf  60026.inf  60027.inf  60028.inf  60029.inf  60031.inf  60032.inf  60033.inf  60034.inf  60035.inf  60036.inf  60037.inf  60038.inf  60039.inf  60042.inf  60043.inf  60044.inf  60045.inf  60046.inf  60048.inf  60049.inf  60050.inf  (+157 more)
clientwork/SRC/: 0.inf  40000.inf  40001.inf  40002.inf  40004.inf  40005.inf  40009.inf  40010.inf  40011.inf  40012.inf  40013.inf  40014.inf  40015.inf  40016.inf  40017.inf  40018.inf  40019.inf  40020.inf  40021.inf  40022.inf  40025.inf  40026.inf  40027.inf  40028.inf  40029.inf  40030.inf  40031.inf  40032.inf  40033.inf  40100.inf  40101.inf  40105.inf  40107.inf  40108.inf  40109.inf  40110.inf  40111.inf  40112.inf  40113.inf  40116.inf  (+184 more)
(+1 files in other folders)
